# cobs-serial-manager

./: .gitignore  CMakeLists.txt
src/cobs/: cobs.hpp  decoder.hpp  encoder.hpp
src/example/: CMakeLists.txt  listener.cpp  pingpong.cpp
src/serial/: serial_manager.hpp
tests/: CMakeLists.txt  test_decoder.cpp  test_encoder.cpp  test_roundtrip.cpp
